// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Component > props.align is equal to center 1`] = `
<div
  class="t-input t-align-center"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.align is equal to left 1`] = `
<div
  class="t-input t-align-left"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.align is equal to right 1`] = `
<div
  class="t-input t-align-right"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.label works fine 1`] = `
<div>
  <div
    class="t-input__wrap"
    spellcheck="false"
  >
    <div
      class="t-input t-align-left t-input--prefix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="custom-node"
        >
          TNode
        </span>
      </div>
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input Component > props.status is equal to default 1`] = `
<div
  class="t-input t-align-left"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.status is equal to error 1`] = `
<div
  class="t-input t-align-left t-is-error"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.status is equal to success 1`] = `
<div
  class="t-input t-align-left t-is-success"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.status is equal to warning 1`] = `
<div
  class="t-input t-align-left t-is-warning"
>
  <input
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    value=""
  />
</div>
`;

exports[`Input Component > props.suffix works fine 1`] = `
<div>
  <div
    class="t-input__wrap"
    spellcheck="false"
  >
    <div
      class="t-input t-align-left t-input--suffix"
    >
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        value=""
      />
      <div
        class="t-input__suffix"
      >
        <span
          class="custom-node"
        >
          TNode
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input Component > props.suffixIcon works fine 1`] = `
<div>
  <div
    class="t-input__wrap"
    spellcheck="false"
  >
    <div
      class="t-input t-align-left t-input--suffix"
    >
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
        value=""
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <span
          class="custom-node"
        >
          TNode
        </span>
      </span>
    </div>
  </div>
</div>
`;
